--- a/filesystem/filesystem.tex
+++ b/filesystem/filesystem.tex
@@ -40,7 +40,7 @@ For instance, if 00000001 is the first byte of the bitmap, then track 0, sector 
 \section{Reserved Track Layout}
 
 The first track of a disk is reserved for both boot code, and disk metadata. The first 62 sectors are reserved for boot code, which can be virtually
-any bootable code.
+any executable code.
 
 The 63rd sector is the space bitmap for this disk.
 
